--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Compile
       run: ./rebar3 compile
     - name: Run dialyzer
-      run: ./rebar dialyzer
+      run: ./rebar3 dialyzer
     - name: Run tests
-      run: ./rebar proper
+      run: ./rebar3 proper
