--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
+%% -*- erlang -*-
 {erl_opts, [debug_info]}.
 
-{deps, [{proper, "1.3.0"}]}.
+{profiles, [{test, [{deps, [{proper, "1.3.0"}]}]}]}.
 
 {project_plugins, [erlfmt, rebar3_proper]}.
